new algo for 100 numbers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,28 +8,8 @@
 			"type": "lldb",
 			"request": "launch",
 			"name": "lldb",
-			"program": "${workspaceFolder}/a.out",
+			"program": "${workspaceFolder}/push_swap",
 			"args": ["7", "6", "94", "3", "1", "-9", "2", "5", "8", "67"]
-		},
-		{
-			"name": "gcc - Build and debug active file",
-			"type": "cppdbg",
-			"request": "launch",
-			"program": "${workspaceFolder}/a.out",
-			"args": ["1", "2", "3", "4"],
-			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}",
-			"environment": [],
-			"externalConsole": false,
-			"MIMode": "gdb",
-			"setupCommands": [
-				{
-					"description": "Enable pretty-printing for gdb",
-					"text": "-enable-pretty-printing",
-					"ignoreFailures": true
-				}
-			],
-			"miDebuggerPath": "/usr/bin/gdb"
 		}
 	]
 }
