--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,56 @@
 			"request": "launch",
 			"name": "lldb",
 			"program": "${workspaceFolder}/push_swap",
-			"args": ["7", "6", "94", "3", "1", "-9", "2", "5", "8", "67"]
+			"args": ["1", "2", "3", "4", "5", "6", "7", "8", "9", "23", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "24", "22", "10"]
+		},
+		{
+			"type": "lldb",
+			"request": "launch",
+			"name": "error 100 - 1",
+			"program": "${workspaceFolder}/push_swap",
+			"args": ["432", "744", "-670", "-306", "-209", "66", "-107", "-561", "809", "-470", "89", "750", "-510", "13", "-122", "-108", "827", "-267", "-149", "-261", "-682", "-842", "427", "361", "-347", "-535", "-902", "970", "994", "170", "-340", "-864", "553", "988", "-562", "-749", "-812", "-67", "0", "-260", "670", "-601", "-75", "276", "697", "-343", "-679", "316", "-752", "-914", "852", "375", "312", "-654", "564", "353", "-821", "-305", "-906", "-481", "629", "-951", "199", "-495", "-800", "369", "487", "983", "-930", "-590", "887", "398", "146", "993", "-746", "-612", "-774", "-254", "211", "895", "-512", "546", "-555", "517", "816", "-498", "-236", "-49", "917", "-461", "430", "712", "-720", "-433", "-610", "738", "69", "-673", "862", "-806"]
+		},
+		{
+			"type": "lldb",
+			"request": "launch",
+			"name": "error 100 - 2",
+			"program": "${workspaceFolder}/push_swap",
+			"args": ["21", "-768", "-47", "928", "-799", "-537", "-434", "-150", "-78", "856", "-291", "860", "353", "-821", "-319", "-270", "-852", "-452", "-278", "651", "76", "-310", "704", "-113", "913", "-1000", "-529", "783", "-961", "-200", "697", "-298", "-849", "-287", "-762", "-779", "-100", "950", "-668", "-401", "-530", "594", "920", "632", "367", "-864", "145", "-831", "459", "-402", "-451", "-330", "-574", "-165", "583", "94", "-941", "446", "691", "647", "3", "-681", "-733", "442", "831", "677", "-450", "-384", "-168", "747", "-385", "454", "963", "-814", "-262", "-738", "-326", "168", "-705", "519", "957", "808", "140", "-932", "-637", "843", "754", "-882", "-91", "-241", "0", "-832", "-192", "-884", "-225", "986", "-137", "-359", "829", "-877"]
+		},
+		{
+			"type": "lldb",
+			"request": "launch",
+			"name": "error 200",
+			"program": "${workspaceFolder}/push_swap",
+			"args": ["857", "-932", "335", "-903", "236", "-496", "344", "-435", "776", "-506", "-82", "987", "-397", "-574", "750", "683", "-235", "676", "-243", "632", "500", "-388", "373", "-237", "-770", "-627", "-212", "-133", "799", "90", "-116", "701", "-247", "70", "-296", "-30", "-757", "148", "534", "-777", "-418", "614", "-953", "-470", "-485", "717", "-132", "-284", "258", "-43", "-147", "983", "-24", "-167", "-406", "-328", "10", "-649", "179", "-416", "-984", "-645", "-559", "791", "-533", "131", "834", "58", "977", "492", "975", "591", "-424", "198", "-553", "-597", "916", "7", "-959", "-909", "854", "871", "-64", "668", "-442", "-752", "638", "-834", "323", "164", "-683", "804", "397", "-364", "-185", "480", "-922", "686", "-87", "0", "985", "-334", "-581", "722", "-638", "802", "-396", "969", "-696", "-302", "-194", "-625", "-883", "21", "-898", "963", "217", "972", "-801", "-294", "-507", "230", "603", "-291", "-723", "-875", "-829", "-526", "-66", "-853", "-342", "-404", "-475", "524", "205", "876", "-207", "527", "-678", "-886", "340", "-349", "38", "-474", "-964", "99", "-791", "286", "465", "784", "146", "-924", "-115", "375", "-330", "2", "-930", "-826", "-210", "132", "431", "970", "923", "-942", "675", "-820", "-128", "393", "-566", "-61", "184", "986", "54", "208", "550", "37", "920", "-616", "-238", "374", "210", "436", "556", "-289", "-344", "25", "-395", "-750", "-589", "-170", "-449", "946", "-478", "-963", "513", "-464", "272", "835", "994", "388"]
+		},
+		{
+			"type": "lldb",
+			"request": "launch",
+			"name": "lldb 2",
+			"program": "${workspaceFolder}/push_swap",
+			"args": []
+		},
+		{
+			"type": "lldb",
+			"request": "launch",
+			"name": "lldb 2",
+			"program": "${workspaceFolder}/push_swap",
+			"args": []
+		},
+		{
+			"type": "lldb",
+			"request": "launch",
+			"name": "lldb 2",
+			"program": "${workspaceFolder}/push_swap",
+			"args": []
+		},
+		{
+			"type": "lldb",
+			"request": "launch",
+			"name": "lldb 2",
+			"program": "${workspaceFolder}/push_swap",
+			"args": []
 		}
 	]
 }
