error manager. Return to 42

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,23 +14,24 @@
 		{
 			"type": "lldb",
 			"request": "launch",
-			"name": "lldb 2",
+			"name": "error 5",
 			"program": "${workspaceFolder}/push_swap",
-			"args": []
+			"args": ["-680", "-534", "482", "284", "-809"
+			]
 		},
 		{
 			"type": "lldb",
 			"request": "launch",
-			"name": "lldb 2",
+			"name": "500 num",
 			"program": "${workspaceFolder}/push_swap",
-			"args": []
+			"args": ["-456", "350", "926", "972", "-25", "497", "955", "-201", "-247", "199", "-589", "-928", "-404", "492", "-690", "-534", "-975", "-487", "-630", "960", "128", "405", "540", "99", "311", "-435", "465", "-244", "840", "-100", "-98", "-332", "177", "183", "-274", "110", "-13", "186", "341", "446", "-675", "479", "433", "-657", "-78", "864", "-130", "327", "-128", "-898", "272", "761", "-313", "809", "-523", "-953", "-868", "-909", "883", "-810", "-939", "445", "-390", "598", "-956", "-733", "-345", "321", "-564", "-157", "521", "265", "-649", "925", "829", "-135", "992", "876", "211", "10", "-279", "-154", "142", "517", "-522", "288", "312", "-85", "-796", "-766", "-142", "525", "-462", "-865", "-169", "-300", "-245", "-189", "-567", "-443", "39", "941", "-342", "388", "-947", "-317", "-712", "-355", "-239", "995", "253", "-478", "-222", "256", "746", "657", "887", "-414", "774", "223", "214", "564", "589", "155", "-481", "-375", "751", "-457", "911", "229", "-433", "-176", "-74", "860", "665", "-181", "715", "-768", "807", "-452", "-192", "-667", "385", "-427", "881", "-240", "-594", "570", "-955", "-605", "-503", "85", "-327", "189", "371", "952", "-739", "-799", "-125", "175", "-454", "-405", "-482", "-966", "-198", "-315", "-340", "-541", "364", "-573", "285", "-263", "888", "803", "740", "733", "587", "541", "33", "724", "-695", "890", "-428", "95", "83", "-535", "667", "-89", "-798", "-991", "-134", "844", "216", "367", "-26", "891", "-310", "259", "150", "-824", "908", "-924", "-925", "-197", "-562", "398", "-160", "758", "865", "907", "357", "-115", "693", "-138", "-781", "-29", "-614", "-103", "797", "-191", "-857", "417", "305", "-200", "-45", "681", "-419", "-835", "1", "-512", "-674", "718", "938", "-993", "834", "-146", "819", "639", "43", "-14", "-272", "21", "-932", "559", "-623", "655", "529", "-941", "781", "466", "241", "607", "-659", "98", "329", "286", "763", "852", "170", "-921", "179", "-843", "174", "827", "-168", "-7", "560", "88", "-887", "921", "-986", "151", "-72", "383", "-817", "-621", "-864", "499", "-890", "437", "-531", "687", "485", "-336", "333", "-740", "679", "-348", "-532", "474", "9", "616", "-797", "289", "-362", "993", "-430", "419", "5", "641", "-236", "-578", "273", "-736", "954", "596", "767", "608", "-607", "161", "139", "-27", "451", "-571", "-592", "109", "-346", "-246", "666", "-62", "785", "-329", "260", "320", "-783", "928", "671", "-544", "345", "-593", "817", "210", "-563", "808", "225", "-378", "301", "-859", "191", "-883", "459", "112", "-297", "752", "410", "243", "622", "-914", "936", "-858", "117", "673", "-205", "157", "-917", "-976", "726", "458", "-330", "-380", "299", "-501", "-967", "-885", "431", "59", "-745", "643", "355", "354", "-542", "457", "-570", "-66", "-304", "939", "-974", "-982", "402", "-450", "-703", "-395", "-172", "799", "755", "-15", "-527", "169", "-459", "832", "-46", "-104", "-225", "489", "-618", "81", "717", "-577", "-811", "-343", "135", "-893", "28", "647", "236", "382", "682", "-698", "488", "-692", "839", "-846", "820", "-539", "-95", "-851", "63", "-424", "-237", "-64", "-664", "13", "22", "-509", "310", "586", "-273", "923", "-647", "-855", "206", "-626", "-53", "438", "854", "-210", "-651", "584", "989", "172", "-668", "762", "611", "-253", "-280", "-709", "-49", "295", "372", "-681", "-229", "-387", "141", "697", "913", "176", "958", "-653", "123", "386", "-828", "-582", "-856", "-700", "-968", "-826", "-256", "-552", "710", "-540", "-576", "-572", "406", "-903", "-301", "991", "-161", "16", "-97", "-530", "838", "619", "-945", "116", "-990", "-718", "-82", "-546", "-985", "442", "-899", "515", "-357", "974", "-755", "-732", "900", "-520", "-307", "-794"]
 		},
 		{
 			"type": "lldb",
 			"request": "launch",
-			"name": "lldb 2",
+			"name": "100 num",
 			"program": "${workspaceFolder}/push_swap",
-			"args": []
+			"args": ["93", "45", "3", "88", "20", "55", "54", "98", "96", "7", "16", "42", "39", "15", "70", "11", "97", "4", "26", "83", "36", "82", "76", "90", "48", "8", "89", "38", "22", "31", "64", "72", "10", "56", "18", "80", "95", "59", "66", "32", "50", "86", "13", "9", "68", "81", "60", "35", "67", "27", "21", "47", "14", "40", "52", "12", "51", "24", "49", "28", "58", "23", "46", "74", "91", "17", "65", "34", "69", "5", "73", "0", "29", "25", "99", "92", "62", "78", "53", "77", "63", "6", "84", "41", "19", "79", "43", "1", "33", "75", "61", "71", "94", "2", "85", "57", "87", "30", "37", "44"]
 		},
 		{
 			"type": "lldb",
