--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,14 +31,14 @@
 			"request": "launch",
 			"name": "100 num",
 			"program": "${workspaceFolder}/push_swap",
-			"args": ["93", "45", "3", "88", "20", "55", "54", "98", "96", "7", "16", "42", "39", "15", "70", "11", "97", "4", "26", "83", "36", "82", "76", "90", "48", "8", "89", "38", "22", "31", "64", "72", "10", "56", "18", "80", "95", "59", "66", "32", "50", "86", "13", "9", "68", "81", "60", "35", "67", "27", "21", "47", "14", "40", "52", "12", "51", "24", "49", "28", "58", "23", "46", "74", "91", "17", "65", "34", "69", "5", "73", "0", "29", "25", "99", "92", "62", "78", "53", "77", "63", "6", "84", "41", "19", "79", "43", "1", "33", "75", "61", "71", "94", "2", "85", "57", "87", "30", "37", "44"]
+			"args": ["0", "1", "3", "2", "-1"]
 		},
 		{
 			"type": "lldb",
 			"request": "launch",
-			"name": "lldb 2",
+			"name": "quotes",
 			"program": "${workspaceFolder}/push_swap",
-			"args": []
+			"args": ["0 1", "3 2 -1"]
 		}
 	]
 }
